--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
     <a onclick="loadPage('home.html')">Trang chủ</a>
     <a onclick="loadPage('accounts.html')">Quản lý tài khoản</a>
     <a onclick="loadPage('QuanLyLC79_All.html')">Quản Lý LC79 </a>
+    <a onclick="loadPage('DepositOrders.html')">Quản Lý Lệnh Nạp </a>
     <a onclick="loadPage('LoginLC79.html')">Login LC79</a>
     <a onclick="loadPage('transactions_lc79.html')">Thống Kê Cược LC79</a>
     <a onclick="loadPage('soduTK.html')">Số Dư Tài Khoản</a>
